--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -169,22 +169,21 @@ jobs:
           echo "Imported certificates:"
           security find-identity -v -p codesigning $KEYCHAIN_PATH
 
-      - name: Set version for build
-        if: steps.check_certs.outputs.has_certs == 'true'
-        run: |
-          # Get current version and extract major.minor
-          CURRENT_VERSION=$(node -p "require('./package.json').version")
-          MAJOR_MINOR=$(echo $CURRENT_VERSION | cut -d. -f1-2)
-          NEW_VERSION="${MAJOR_MINOR}.${{ github.run_number }}"
-
-          npm version $NEW_VERSION --no-git-tag-version
-          echo "✅ Version set to: $NEW_VERSION"
-
       - name: Build macOS App Store Package
         if: steps.check_certs.outputs.has_certs == 'true'
         env:
           ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES: true
-        run: npm run build:mac
+        run: |
+          # Get current version and extract major.minor
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          MAJOR_MINOR=$(echo $CURRENT_VERSION | cut -d. -f1-2)
+          BUILD_VERSION="${MAJOR_MINOR}.${{ github.run_number }}"
+
+          echo "✅ Package version: $CURRENT_VERSION (unchanged)"
+          echo "✅ Build version for Apple: $BUILD_VERSION"
+
+          # Build with custom buildVersion without modifying package.json
+          npm run build && electron-builder --mac --universal --config.buildVersion="$BUILD_VERSION"
 
       - name: List release directory
         if: steps.check_certs.outputs.has_certs == 'true'
